# LinearML

./: .gitignore  Makefile  Makefile.config.in  aclocal.m4  configure.ac
compiler/: Makefile  emit.ml  genGlobals.ml.in  linearCheck.ml  nastCheck.ml  recordCheck.ml  typing.ml
stdlib/: Makefile  config.h.in
